--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ before_script:
  - sh -e /etc/init.d/xvfb start
  - sleep 3
 script:
- - coverage run --source=randomizer ./test_script.py
+ - coverage run --source=chances ./test_script.py
 after_success: coveralls
