--- a/.github/workflows/ci-push.yml
+++ b/.github/workflows/ci-push.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 9
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ['3.9', '3.10', '3.11']
         os: [ubuntu-latest, macos-latest]
 
     steps:
